--- a/views/createRepo.ejs
+++ b/views/createRepo.ejs
@@ -5,6 +5,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        /* Set background color for the body */
+        body {
+            background-color: #1d1b34;
+            font-family: Arial, sans-serif;
+        }
+
+        /* Style the form container */
+        #repositoryForm {
+            max-width: 300px;
+            margin: 0 auto;
+            padding: 20px;
+            margin-top: 200px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 221, 255, 1.8);
+        }
+
+        /* Style the text input */
+        #reponame {
+            width: 90%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 2px solid #07a607;
+            border-radius: 5px;
+        }
+
+        /* Style the radio buttons and their labels */
+        label {
+            display: block;
+            margin-bottom: 10px;
+            color: #07a607;
+            font-weight: bold;
+        }
+
+        /* Style the file input */
+        #file {
+            width: 90%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 2px solid #07a607;
+            border-radius: 5px;
+        }
+
+        /* Style the buttons */
+        button {
+            padding: 10px 20px;
+            margin-right: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            background-color: #07a607;
+            color: #fff;
+            font-weight: bold;
+        }
+
+        /* Style the "Cancel" button */
+        button:nth-child(1) {
+            background-color: #07a607;
+        }
+
+        /* Style the "Create Repository" button */
+        button:nth-child(2) {
+            background-color: #191961;
+        }
+    </style>
 </head>
 
 <body>
@@ -22,7 +88,7 @@
     </form>
 </body>
 <script>
-    const userId = localStorage.getItem("username");
+    const userId = "<%= username %>";
     function cancel() {
         window.location.href = "/";
     }
@@ -47,7 +113,7 @@
         formData.append("visibility", visibility);
         formData.append("accountId", userId);
         formData.append("file", repofile);
-
+        
         fetch("/createRepository", {
             method: "POST",
             body: formData, // Use FormData for file upload
