--- a/views/user.ejs
+++ b/views/user.ejs
@@ -298,7 +298,7 @@
 
     const explores = document.getElementById("explore")
     function explore() {
-        window.location.href = "/" + explores.value
+        window.location.href = "/Explore/" + explores.value
     }
 
     function addFriend() {
