--- a/views/user.ejs
+++ b/views/user.ejs
@@ -12,6 +12,22 @@
             padding: 0;
         }
 
+        a {
+            width: 50px;
+            height: 50px;
+            border-radius: 30px;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 30px;
+        }
+
+        h1 {
+            color: white;
+        }
+
         .header {
             display: flex;
             justify-content: space-between;
@@ -53,7 +69,6 @@
         }
 
         .chatting-interface {
-            /* Styles for the chatting interface */
             height: 400px;
             border: 1px solid #ccc;
             padding: 10px;
@@ -138,6 +153,7 @@
         .repo {
             background-color: #007bff;
             border-radius: 20px;
+            margin-bottom: 50px;
         }
 
         button {
@@ -175,6 +191,26 @@
             flex-direction: row;
         }
 
+        .game-card {
+            display: inline-block;
+            width: 200px;
+            padding: 20px;
+            margin: 10px;
+            color: #f0f0f0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .cta-button {
+            background-color: #07a607;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 20px;
+            font-weight: bold;
+        }
 
 
         @media only screen and (max-width: 768px) {
@@ -253,6 +289,7 @@
 
 <body>
     <div class="header">
+        <a href="/"><img src="/assets/logo2.jpg"></a>
         <button class="profile-button" onclick="profile()">Profile</button>
         <input type="text" class="explore-bar" id="explore" placeholder="Explore...">
         <button onclick="explore()">explore</button>
@@ -275,19 +312,66 @@
                 </div>
 
             </div>
-            <div class="section repo">
-                <h2>Repository</h2>
-                <button onclick="createRepository()">create new Repository</button>
-                <div id="repo-container"></div>
+            <div>
+                <div class="section repo">
+                    <h2>Repository</h2>
+                    <button onclick="createRepository()">create new Repository</button>
+                    <div id="repo-container"></div>
+                </div>
+                <h1>Cosmic Arcade</h1>
+                <div class="section repo">
+                    <div class="game-card">
+                        <h3>tictactoe</h3>
+                        <a onclick="game('tictactoe')" class="cta-button">Play Now</a>
+                    </div>
+                    <div class="game-card">
+                        <h3>cosmicshoot</h3>
+                        <a onclick="game('cosmicshoot')" class="cta-button">Play Now</a>
+                    </div>
+                    <div class="game-card">
+                        <h3>chess</h3>
+                        <a onclick="game('chess')" class="cta-button">Play Now</a>
+                    </div>
+                    <div class="game-card">
+                        <h3>truck</h3>
+                        <a onclick="game('truck')" class="cta-button">Play Now</a>
+                    </div>
+                    <div class="game-card">
+                        <h3>Rock-Paper-Scissors</h3>
+                        <a onclick="game('Rock-Paper-Scissors')" class="cta-button">Play Now</a>
+                    </div>
+                    <div class="game-card">
+                        <h3>paint</h3>
+                        <a onclick="game('paint')" class="cta-button">Play Now</a>
+                    </div>
+                </div>
             </div>
+
         </div>
+
+    </div>
 </body>
 
-
 <script>
-    // const userId = localStorage.getItem("username");
+    function game(game) {
+        if (game == 'tictactoe') {
+            window.location.href = "/TicTacToe";
+        } else if (game == 'cosmicshoot') {
+            window.location.href = "/cosmicshoot'";
+        } else if (game == 'chess') {
+            window.location.href = "/chess";
+        } else if (game == 'truck') {
+            window.location.href = "/truck";
+        } else if (game == 'paint') {
+            window.location.href = "/paint";
+        } else if (game == 'Rock-Paper-Scissors') {
+            window.location.href = "/Rock-Paper-Scissors";
+        }
+    }
+</script>
+<script>
     const userId = "<%= username %>"
-    
+
     function createRepository() {
         window.location.href = "/new-Repository";
     }
@@ -299,35 +383,6 @@
     const explores = document.getElementById("explore")
     function explore() {
         window.location.href = "/Explore/" + explores.value
-    }
-
-    function addFriend() {
-        // const friendId = document.getElementById("addFriend").value
-        const data = {
-            userId: userId,
-            friendId: friendId,
-        };
-
-        fetch("/addFriend", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-            },
-            body: JSON.stringify(data),
-        })
-            .then((response) => response.json())
-            .then((data) => {
-                console.log(data);
-                if (data.status === "success") {
-                    alert("Friend added successfully!");
-                } else {
-                    alert("Failed to add friend: " + data.message);
-                }
-            })
-            .catch((error) => {
-                console.error("Error adding friend:", error);
-                alert("An error occurred while adding friend. Please try again later.");
-            });
     }
 
     function loadRepositories() {
@@ -374,7 +429,7 @@
     }
 
     function openRepository(name) {
-        window.location.href = "/" + name;
+        window.location.href = "/" + userId + "/" + name;
     }
 
     loadRepositories();
