--- a/views/notfound.ejs
+++ b/views/notfound.ejs
@@ -10,6 +10,9 @@
     <title>404</title>
 </head>
 <style>
+    body{
+background-color: #1d1b34;
+    }
     h1,
     h2 {
         text-align: center;
