--- a/views/createRepo.ejs
+++ b/views/createRepo.ejs
@@ -53,7 +53,7 @@
         }
 
         /* Style the text input */
-        #reponame {
+        #reponame,#repodiscription {
             width: 90%;
             padding: 10px;
             margin-bottom: 10px;
@@ -120,7 +120,7 @@
         <h1>Create new Repository</h1>
         <input type="text" id="reponame" name="name" placeholder="Repository Name" />
         <label>
-            <input type="text" id="reponame" name="name" placeholder="Description (optional)" />
+            <input type="text" id="repodiscription" name="name" placeholder="Description (optional)" />
         </label>
         <label>
             <input type="radio" name="visibility" value="public" /> Public
