--- a/views/createRepo.ejs
+++ b/views/createRepo.ejs
@@ -29,6 +29,7 @@
             margin-right: 10px;
             cursor: pointer;
         }
+
         a {
             width: 50px;
             height: 50px;
@@ -40,6 +41,7 @@
             height: auto;
             border-radius: 30px;
         }
+
         /* Style the form container */
         #repositoryForm {
             color: #fff;
@@ -53,7 +55,8 @@
         }
 
         /* Style the text input */
-        #reponame,#repodiscription {
+        #reponame,
+        #repodiscription {
             width: 90%;
             padding: 10px;
             margin-bottom: 10px;
@@ -107,7 +110,6 @@
         button:nth-child(2) {
             background-color: #191961;
         }
-
     </style>
 </head>
 
@@ -156,12 +158,15 @@
         const reponame = name.value;
         const topicsInput = document.getElementById("topics");
         const topics = topicsInput.value;
+        const repodescription = document.getElementById("repodiscription");
+        const description = repodescription.value;
         const file = document.getElementById("file");
         const repofile = file.files[0];
         const formData = new FormData();
         formData.append("name", reponame);
         formData.append("visibility", visibility);
         formData.append("topics", topics);
+        formData.append("description", description);
         formData.append("accountId", userId);
         formData.append("file", repofile);
 
